# cpp-snake

./: .gitignore  CMakeLists.txt  LICENSE  README.md
src/: main.cpp
